--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <meta name="description" content="Jeu qui reproduit le snake">
   </head>
   <body>
-    <div id="cursor" class="cursor"></div>
+    <div class="container">
+      <div id="cursor" class="cursor"></div>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
