--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
   <body>
     <div class="container">
       <div id="cursor" class="cursor"></div>
+
+      <div class="menu">
+        <h2>Vitesse</h2>
+        <article>
+          <button>-</button>
+          <p>10</p>
+          <button>+</button>
+        </article>
+      </div>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
