Finish layout menu

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <div class="container">
       <div id="cursor" class="cursor"></div>
 
-      <div class="menu">
+      <div class="menu" id="menu">
         <h2>Vitesse</h2>
         <article>
-          <button>-</button>
-          <p>10</p>
-          <button>+</button>
+          <button id="btn_moins">-</button>
+          <p id="counter">10</p>
+          <button id="btn_plus">+</button>
         </article>
+        <button class="validate_btn" id="validate_btn">Valider</button>
       </div>
     </div>
     <script type="module" src="/main.js"></script>
